fixed spacing issue in project cards

--- a/projects/projects_styles.css
+++ b/projects/projects_styles.css
@@ -81,13 +81,6 @@
   pointer-events: none;
 }
 
-/* .card-wrapper::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  mask-image: linear-gradient(to right, black, transparent);
-} */
-
 .card {
   border-radius: 15px;
   cursor: pointer;
@@ -96,14 +89,15 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   height: 187px;
   /* z-index: 999; */
   /* outline: 2px solid lime; */
 }
 
 .card:not(.card-spacer) {
-  background: rgba(124, 20, 153, 0.3);
+  /* background: rgba(124, 20, 153, 0.3); */
+  background: rgba(124, 20, 153);
 }
 
 .scroll-controls {
@@ -143,12 +137,13 @@
 }
 
 .card-icons-wrapper {
+  /* outline: 2px solid lime; */
   align-items: center;
   display: flex;
   justify-content: center;
   width: fit-content;
-  margin-bottom: 1rem;
-  margin-inline: auto;
+  padding-bottom: 1rem;
+  margin: auto;
   gap: 1rem;
 }
 .icon {
